--- a/workflow.yaml
+++ b/workflow.yaml
@@ -170,6 +170,7 @@ jobs:
 
           command -v git >/dev/null 2>&1 || { echo "ERROR: git not found"; exit 1; }
           git lfs version >/dev/null 2>&1 || { echo "ERROR: git-lfs not found"; exit 1; }
+          export GIT_LFS_SKIP_SMUDGE=1
 
           LFS_REPO="${{ inputs.container.lfs_repo }}"
           LFS_BRANCH="${{ inputs.container.lfs_branch }}"
@@ -234,7 +235,7 @@ jobs:
           max_attempts=5
           while true; do
             echo "LFS pull attempt ${attempt}/${max_attempts}..."
-            if git -C "$LFS_DIR" lfs pull; then
+            if git -C "$LFS_DIR" lfs fetch; then
               break
             fi
             if [[ $attempt -ge $max_attempts ]]; then
