--- a/workflow.yaml
+++ b/workflow.yaml
@@ -686,6 +686,14 @@ jobs:
           RETRY_INTERVAL=3
           remote_host="${{ needs.create_session.steps.get_hostname.outputs.target_hostname }}"
           remote_port="${{ needs.create_session.steps.get_port.outputs.SESSION_PORT }}"
+          local_host=""
+          if [[ -n "${remote_host}" ]]; then
+            host_short=$(hostname 2>/dev/null || true)
+            host_fqdn=$(hostname -f 2>/dev/null || true)
+            if [[ "${remote_host}" == "${host_short}" || "${remote_host}" == "${host_fqdn}" ]]; then
+              local_host="127.0.0.1"
+            fi
+          fi
           
           cd ${{ needs.setup.outputs.rundir }}
           
@@ -695,6 +703,9 @@ jobs:
             
             if curl --silent --connect-timeout 5 "http://${remote_host}:${remote_port}" >/dev/null 2>&1; then
               echo "$(date) Success: Server is listening!"
+              exit 0
+            elif [[ -n "${local_host}" ]] && curl --silent --connect-timeout 5 "http://${local_host}:${remote_port}" >/dev/null 2>&1; then
+              echo "$(date) Success: Server is listening on ${local_host}:${remote_port}!"
               exit 0
             elif [ -f job.ended ]; then
               echo "$(date) Job completed"
