--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -789,6 +789,20 @@ jobs:
         autoselect: true
         include-workspace: false
         tooltip: Resource to run the service
+
+      # ========================================================================
+      # Deployment Type
+      # ========================================================================
+      runtype:
+        label: Deployment Type
+        type: dropdown
+        default: vllm
+        tooltip: Deploy vLLM only or full vLLM+RAG stack
+        options:
+          - value: vllm
+            label: vLLM Only
+          - value: all
+            label: vLLM + RAG (Chroma)
       
       # ========================================================================
       # Scheduler Configuration (for SLURM/PBS job submission)
@@ -803,13 +817,14 @@ jobs:
             label: Submit to Job Scheduler
             tooltip: Enable to submit job via SLURM or PBS scheduler (detected automatically from resource). Disable for direct SSH execution.
             default: true
+            hidden: true
 
           type_override:
             type: dropdown
             label: Scheduler Type Override
             tooltip: Use when resource metadata is missing/incorrect. Auto uses the resource scheduler type.
             default: auto
-            hidden: ${{ inputs.scheduler.enabled != true }}
+            hidden: true
             options:
               - value: auto
                 label: Auto (resource)
@@ -983,17 +998,6 @@ jobs:
             label: Apptainer / Singularity
           - value: docker
             label: Docker
-      
-      runtype:
-        label: Deployment Type
-        type: dropdown
-        default: vllm
-        tooltip: Deploy vLLM only or full vLLM+RAG stack
-        options:
-          - value: vllm
-            label: vLLM Only
-          - value: all
-            label: vLLM + RAG (Full Stack)
 
       # ========================================================================
       # Model Configuration
@@ -1001,6 +1005,7 @@ jobs:
       model:
         type: group
         label: Model Configuration
+        collapsed: true
         items:
           source:
             type: dropdown
